--- a/app/data/data2.mdx
+++ b/app/data/data2.mdx
@@ -1,3 +1,7 @@
+---
+title: "Hello, MDX in NextJs"
+---
+
 # Hello, MDX in NextJs
 
 - [How to handle user-initiated events](/learn/responding-to-events)
